langDropdown: fix z-index

--- a/src/LoginPage/LanguageDropdown.module.css
+++ b/src/LoginPage/LanguageDropdown.module.css
@@ -10,6 +10,7 @@
     list-style: none;
     display: none;
     cursor: pointer;
+    z-index: 10;
 }
 
 .listItem, .langDisplay {
